--- a/app/views/shared/_mobile_navbar.html.slim
+++ b/app/views/shared/_mobile_navbar.html.slim
@@ -1,4 +1,4 @@
-div.fixed.bottom-0.left-0.z-50.w-full.bg-white.border-t.border-gray-200.dark:border-gray-600.sm:hidden
+.fixed.bottom-0.left-0.z-50.w-full.bg-white.border-t.border-gray-200.dark:border-gray-600.sm:hidden
     #expandable-menu.fixed.bottom-20.grid.py-4.w-full.bg-white.max-w-xl.grid-cols-5.mx-auto.font-medium.hidden.border.border-gray-300
         = render "shared/mobile_navbar_link", text: "suroviny", path: ingredients_path, icon: "plant"
         span.hover:bg-gray-200.dark:hover:bg-gray-800
