--- a/test/components/previews/card_component_preview/cards.html.slim
+++ b/test/components/previews/card_component_preview/cards.html.slim
@@ -9,9 +9,9 @@
     = object.detail
 
   = card.with_actions do
-    = button_link_to 'Action', '#'
-    = button_link_to 'Another action', '#', type: :secondary
-    = action_button_to 'Something else', '#', method: :delete
+    = button_link_to "Action", "#"
+    = button_link_to "Another action", "#", type: :secondary
+    = action_button_to "Something else", "#", method: :delete
 
   = card.with_body do
     = object.description
