--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -2,7 +2,7 @@
     = render CardComponent.new(recipe, class: local_assigns[:class]) do |card|
         = card.with_heading do
             .grid.grid-cols-2
-                = link_to(recipe.name, recipe, data: {turbo: false})
+                = link_to(recipe.name, recipe, data: { turbo_frame: "_top" })
                 .text-right
                     - if recipe.liked_by?(current_user)
                         = button_to liked_recipe_path(recipe), method: :delete, class: "inline-block" do
@@ -12,6 +12,7 @@
                         = button_to liked_recipes_path(recipe_id: recipe.id), method: :post, class: "inline-block" do
                             = svg("heart")
                             = recipe.reactions.size
+
         = card.with_body do
             .grid.grid-cols-2
                 = recipe.category&.name
