--- a/app/views/recipes/_tasks.html.slim
+++ b/app/views/recipes/_tasks.html.slim
@@ -10,7 +10,7 @@ div
   - recipe.tasks.each do |task|
       .grid.grid-cols-5
         div = task.name
-        div.col-span-3.pe-5 = task.description
+        .col-span-3.pe-5 = task.description
         div
           - unless task.days_before_cooking.blank?
             = task.days_before_cooking
