--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -5,10 +5,10 @@
 #details.mt-3.mb-4
   p.italic = @recipe.category&.name
   / p.italic = @recipe.author.email
-  div.mt-2.flex.justify-between
-    div.flex.flex-wrap id="#{dom_id(@recipe)}-labels"
+  .mt-2.flex.justify-between
+    .flex.flex-wrap id="#{dom_id(@recipe)}-labels"
       - @recipe.labels.sort_by(&:id).each do |label|
-        div.mb-2 = label_badge(label)
+        .mb-2 = label_badge(label)
 
     div
       ul.cursor-pointer.inline.p-2.mx-2.rounded-md.hover:bg-ocean-100
@@ -29,9 +29,7 @@
               - else
                 = action_button_to "zveřejnit", published_recipes_path(recipe_id: @recipe.id), method: :post
 
-          li = action_button_to 'vytvořit kopii', recipe_duplications_path(@recipe), method: :post
-
-
+          li = action_button_to "vytvořit kopii", recipe_duplications_path(@recipe), method: :post
 
   div
       span.float-right
@@ -46,8 +44,7 @@
   - else
     = render "ingredients", recipe: @recipe
 
-
-  div.col-span-2
+  .col-span-2
     #procedure.mb-3
       h2.text-2xl.inline-block.me-2 = "Popis"
       - if @edited_section == :procedure
@@ -57,7 +54,6 @@
       - else
         span.float-right = button_link_to "upravit popis", recipe_path(@recipe, edited_section: :procedure) if can? :update, @recipe
         = @recipe.procedure
-
 
     - if @edited_section == :tasks
       = render "tasks_edit", recipe: @recipe, tasks: @recipe.tasks
