--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,4 @@
 /* Application styles */
-
 body {
   background-color: #F8ECE5;
 }
@@ -31,4 +30,29 @@ a {
 
 .card-shadow:hover {
   box-shadow: 0 0.2rem 0 0px rgba(0, 0, 0, 0.25);
+}
+
+/* Animations */
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.1);
+    /* color: #085366; */
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(1.1);
+    /* color: #085366; */
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.animate-heartbeat:hover {
+  animation: heartbeat 2s infinite;
 }
