--- a/app/views/events/_day_card.html.slim
+++ b/app/views/events/_day_card.html.slim
@@ -3,10 +3,10 @@
 - daily_plan = day.daily_plan.presence
 - day_dom_id = daily_plan.present? ? dom_id(day.daily_plan) : nil
 
-div.group id="#{day_dom_id}-card" class="#{daily_plan.present? ? "bg-peach-200" : "bg-peach-100 hidden md:inline"}"
-  div.text-xl.mt-2.ps-2
+.group id="#{day_dom_id}-card" class="#{daily_plan.present? ? "bg-peach-200" : "bg-peach-100 hidden md:inline"}"
+  .text-xl.mt-2.ps-2
     - if daily_plan.present?
-      = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-ocean-700", data: {turbo: false} do
+      = link_to daily_plan_path(daily_plan), class: "hover:font-bold hover:text-ocean-700", data: { turbo: false } do
         = weekday_name(day.date)
         = day.date.strftime(" %d.%m.")
 
@@ -20,6 +20,5 @@ div.group id="#{day_dom_id}-card" class="#{daily_plan.present? ? "bg-peach-200" 
         - daily_plan.daily_plan_recipes.each do |daily_recipe|
           = render "day_recipe", daily_recipe:
 
-        li.px-3.hidden.group-hover:inline
-          = button_link_to "přidat recept", daily_plan_path(daily_plan), icon: :plus, type: :secondary, data: {turbo_frame: "_top"}
-
+        li.px-3.invisible.group-hover:visible
+          = button_link_to "přidat recept", daily_plan_path(daily_plan), icon: :plus, type: :secondary, data: { turbo_frame: "_top" }
