--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,18 @@ a {
   box-shadow: 0 0.2rem 0 0px rgba(0, 0, 0, 0.25);
 }
 
+/* This hides stepper on number input */
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+  margin: 0;
+}
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+}
+
 /* Animations */
 @keyframes heartbeat {
   0% {
