--- a/app/components/card_component.html.slim
+++ b/app/components/card_component.html.slim
@@ -1,11 +1,11 @@
-.bg-white.rounded-xl.border.border-black.border-1.p-4.mb-2.card-shadow class="#{classes}"
-  .text-2xl.mb-2 data-turbo="false"
+.bg-white.rounded-xl.border.border-black.border-1.p-4.mb-2 class="#{classes}"
+  .text-2xl.mb-2.empty:hidden data-turbo="false"
     = heading || name
 
-  .mt-1
+  .mt-1.empty:hidden
     = actions
 
-  .text-gray-600.text-sm
+  .text-gray-600.text-sm.empty:hidden
     = details
 
   div
