--- a/app/views/recipes/_ingredients.html.slim
+++ b/app/views/recipes/_ingredients.html.slim
@@ -1,16 +1,42 @@
+/# locals: (recipe:)
+
 div
-    = table @recipe.recipe_ingredients.sort_by(&:recipe_amount).reverse do |t|
+    = heading("suroviny", :h2)
+
+    form class="max-w-xs ms-2" url=recipe_path(recipe) method="get" data-controller="form" data-action="value-changed@window->form#submit" data-form-debounce-timeout-value=100
+        <label for="portion_count" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Počet porcí:</label>
+        <div class="relative flex items-center max-w-[8rem]" data-controller="input-value">
+            <button type="button" id="decrement-button" data-input-value-target="decrementer" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-s-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none disabled:bg-gray-200 disabled:hover:bg-gray-200">
+                <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h16"/>
+                </svg>
+            </button>
+            <input type="number" name="portion_count" id="portion_count" min="1" data-input-value-target="input" data-action="change->form#submit" aria-describedby="helper-text-explanation" class="bg-gray-50 border-x-0 border-gray-300 h-11 text-center text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full py-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" value="#{params[:portion_count] || recipe.portion_count}" />
+            <button type="button" id="increment-button" data-input-value-target="incrementer" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+                <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16"/>
+                / </svg>
+            </button>
+        </div>
+
+    / = default_form_for recipe, url: recipe_path(recipe), method: :get, data: { controller: "form", "form-debounce-timeout-value": 0, "turbo-frame": "#{dom_id(recipe)}-ingredients" }, class: "max-w-xs mx-auto" do |form|
+        .relative.flex.items-center.max-w-[8rem]
+            button type="button" id="decrement-button" data-input-counter-decrement="recipe_portion_count" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-s-lg p-5 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none"
+                = icon(:minus)
+            input type="text" id="recipe_portion_count" aria-describedby="helper-text-explanation" data={ "input-counter": true } class="bg-gray-50 border-x-0 border-gray-300 h-11 text-center text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full py-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="999"
+            / = form.input :portion_count, label: "počet porcí", input_html: { data: { action: "input->form#submit", "input-counter": true } }, autofocus: request.url.include?("?portion_count"), onfocus: "this.setSelectionRange(this.value.length,this.value.length);", col_span: 6
+            button type="button" id="increment-button" data-input-counter-increment="recipe_portion_count" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none"
+                = icon(:plus)
+
+    = table recipe.recipe_ingredients.sort_by(&:recipe_amount).reverse do |t|
         = t.column :název do |r_ingredient|
             = link_to r_ingredient.ingredient.name, r_ingredient.ingredient
         = t.column "množství na #{@portion_count} porcí" do |r_ingredient|
-            = formatted_amount_with_unit(r_ingredient, @portion_count)
+            - if r_ingredient.amount&.positive?
+                = formatted_amount_with_unit(r_ingredient, @portion_count)
+            - else
+                | -
+        = t.column :poznámka do |r_ingredient|
+            = r_ingredient.comment
 
-    = button_link_to "upravit suroviny", recipe_path(@recipe, edited_section: :ingredients) if can? :update, @recipe
-    br
-    | zobrazit pro
-    br
-    = button_link_to "1 porci", recipe_path(@recipe, portion_count: 1)
-    = button_link_to "12 porcí", recipe_path(@recipe, portion_count: 12)
-    = form_tag recipe_path(@recipe), method: :get, class: "inline", data: { controller: "form", "form-debounce-timeout-value": 0, "turbo-frame": "#{dom_id(@recipe)}-ingredients-" } do
-        = text_field_tag :portion_count, params[:portion_count], class: "w-12 h-8 me-2 border border-green-600 rounded-md", data: { action: "input->form#submit" }, autofocus: request.url.include?("?portion_count"), onfocus: "this.setSelectionRange(this.value.length,this.value.length);"
-        | porcí
+    = button_link_to "upravit suroviny", recipe_path(recipe, edited_section: :ingredients) if can? :update, recipe
