--- a/app/views/recipes/_tasks.html.slim
+++ b/app/views/recipes/_tasks.html.slim
@@ -1,18 +1,24 @@
 div
   h2.text-2xl.inline-block.me-3 = "úkoly"
-  span.float-end = button_link_to "upravit úkoly", recipe_path(recipe, edited_section: :tasks) if can? :update, recipe
+  - if can? :update, recipe
+    span.float-end = button_link_to "upravit úkoly", recipe_path(recipe, edited_section: :tasks)
 
-  .grid.grid-cols-5.font-bold
-    span = "název"
-    span.col-span-2 = "popis"
-    span = "dní před vařením"
+  - if recipe.tasks.empty?
+    = render CardComponent.new(class: "w-1/3 border-gray-300", shadow: false) do |c|
+      = c.with_body do
+       span.italic = "recept nemá žádné úkoly"
+  - else
+    .grid.grid-cols-5.font-bold
+      span = "název"
+      span.col-span-2 = "popis"
+      span = "dní před vařením"
 
-  - recipe.tasks.each do |task|
-      .grid.grid-cols-5
-        div = task.name
-        .col-span-3.pe-5 = task.description
-        div
-          - unless task.days_before_cooking.blank?
-            = task.days_before_cooking
-            = " "
-            = t("day", count: task.days_before_cooking)
+    - recipe.tasks.each do |task|
+        .grid.grid-cols-5
+          div = task.name
+          .col-span-3.pe-5 = task.description
+          div
+            - unless task.days_before_cooking.blank?
+              = task.days_before_cooking
+              = " "
+              = t("day", count: task.days_before_cooking)
