--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -3,8 +3,11 @@
 = render "breadcrumbs", recipe: @recipe
 
 #details.mt-3.mb-4
-  p.italic = @recipe.category&.name
-  / p.italic = @recipe.author.email
+  p
+    span.font-bold = @recipe.category&.name
+    - if @recipe.author != current_user
+      = ", vytvořil/a "
+      span.font-bold = "#{@recipe.author.name}"
   .mt-2.flex.justify-between
     .flex.flex-wrap id="#{dom_id(@recipe)}-labels"
       - @recipe.labels.sort_by(&:id).each do |label|
@@ -15,10 +18,10 @@
       - if @recipe.liked_by?(current_user)
         = action_button_to "odebrat z oblíbených", liked_recipe_path(@recipe), method: :delete
       - else
-        = action_button_to "přidat do oblíbených", liked_recipes_path(recipe_id: @recipe), method: :post, icon: "heart"
+        = action_button_to "přidat do oblíbených", liked_recipes_path(recipe_id: @recipe), method: :post, icon: :heart
 
       - unless @recipe.author == current_user
-        = action_button_to "zkopírovat do mých receptů", recipe_duplications_path(@recipe), method: :post
+        = action_button_to "zkopírovat do mých receptů", recipe_duplications_path(@recipe), method: :post, icon: :copy, type: :plain
 
       button id="eventMoreOptionsDropdownButton" data-dropdown-toggle="eventMoreOptionsDropdown" class="font-medium rounded-lg px-5 py-2.5 text-center" type="button"
         = icon("dots-three-circle", class: "mr-1")
@@ -26,7 +29,9 @@
 
       div id="eventMoreOptionsDropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
         ul class="px-2 py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="eventMoreOptionsDropdown"
-          li = button_link_to "upravit", edit_recipe_path(@recipe), class: "mt-0" if can? :update, @recipe
+          - if can? :update, @recipe
+            li = button_link_to "upravit", edit_recipe_path(@recipe), class: "mt-0"
+
           - if can? :delete, @recipe
             li = action_button_to "smazat", recipe_path(@recipe), type: :dangerous, method: :delete, data: { turbo_confirm: "Opravdu chcete smazat recept?" }, disabled: !@recipe.deletable?
 
@@ -37,21 +42,25 @@
               - else
                 = action_button_to "zveřejnit", published_recipes_path(recipe_id: @recipe.id), method: :post
 
-          li = action_button_to "vytvořit kopii", recipe_duplications_path(@recipe), method: :post
+          - if @recipe.author == current_user
+            li = action_button_to "vytvořit kopii", recipe_duplications_path(@recipe), method: :post
+
+          li.hidden.italic.only:inline = "Není k dispozici žádná další možnost"
 
 .md:grid.md:grid-cols-3
-  - if @edited_section == :ingredients
-    = render "ingredients_edit", recipe: @recipe, recipe_ingredients: @recipe.recipe_ingredients
-  - else
-    = render "ingredients", recipe: @recipe
+  .mr-2.border-r.border-ocean-700
+    - if @edited_section == :ingredients
+      = render "ingredients_edit", recipe: @recipe, recipe_ingredients: @recipe.recipe_ingredients
+    - else
+      = render "ingredients", recipe: @recipe
 
-  .col-span-2
+  .ml-2.col-span-2
     #procedure.mb-3
       h2.text-2xl.inline-block.me-2 = "Popis"
       - if @edited_section == :procedure
         = form_for @recipe do |form|
           = form.rich_text_area :procedure, data: { controller: "trix" }, value: @recipe.procedure.presence
-          = form.submit "uložit", class: Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:primary]
+          = form.submit "uložit", class: "#{Buttons::ButtonDefaults::DEFAULT_CLASSES[:primary]} #{Buttons::ButtonDefaults::DEFAULT_SIZE_CLASSES[:default]}"
       - else
         span.float-right = button_link_to "upravit popis", recipe_path(@recipe, edited_section: :procedure) if can? :update, @recipe
         = @recipe.procedure
