--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,3 +68,7 @@ input[type=number]::-webkit-outer-spin-button {
 .animate-heartbeat:hover {
   animation: heartbeat 2s infinite;
 }
+
+button.dropdown-button:has( + div > ul:empty) {
+  display: none;
+}
