--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -16,14 +16,14 @@
     div
       span.float-right
       - if @recipe.liked_by?(current_user)
-        = action_button_to "odebrat z oblíbených", liked_recipe_path(@recipe), method: :delete
+        = action_button_to "odebrat z oblíbených", liked_recipe_path(@recipe), method: :delete, icon: :heart, type: :plain
       - else
-        = action_button_to "přidat do oblíbených", liked_recipes_path(recipe_id: @recipe), method: :post, icon: :heart
+        = action_button_to "přidat do oblíbených", liked_recipes_path(recipe_id: @recipe), method: :post, icon: :heart, type: :plain
 
       - unless @recipe.author == current_user
         = action_button_to "zkopírovat do mých receptů", recipe_duplications_path(@recipe), method: :post, icon: :copy, type: :plain
 
-      button id="eventMoreOptionsDropdownButton" data-dropdown-toggle="eventMoreOptionsDropdown" class="font-medium rounded-lg px-5 py-2.5 text-center" type="button"
+      button.dropdown-button id="eventMoreOptionsDropdownButton" data-dropdown-toggle="eventMoreOptionsDropdown" class="font-medium rounded-lg px-5 py-2.5 text-center" type="button"
         = icon("dots-three-circle", class: "mr-1")
         = "další možnosti"
 
@@ -45,25 +45,32 @@
           - if @recipe.author == current_user
             li = action_button_to "vytvořit kopii", recipe_duplications_path(@recipe), method: :post
 
-          li.hidden.italic.only:inline = "Není k dispozici žádná další možnost"
+            / li.hidden.italic.only:inline = "Není k dispozici žádná další možnost"
 
 .md:grid.md:grid-cols-3
-  .mr-2.border-r.border-ocean-700
+  .pr-16
     - if @edited_section == :ingredients
       = render "ingredients_edit", recipe: @recipe, recipe_ingredients: @recipe.recipe_ingredients
     - else
       = render "ingredients", recipe: @recipe
 
-  .ml-2.col-span-2
+  .pl-6.col-span-2.sm:border-l.sm:border-ocean-700
     #procedure.mb-3
-      h2.text-2xl.inline-block.me-2 = "Popis"
+      h2.text-2xl.inline-block.me-2 = "postup"
       - if @edited_section == :procedure
         = form_for @recipe do |form|
           = form.rich_text_area :procedure, data: { controller: "trix" }, value: @recipe.procedure.presence
           = form.submit "uložit", class: "#{Buttons::ButtonDefaults::DEFAULT_CLASSES[:primary]} #{Buttons::ButtonDefaults::DEFAULT_SIZE_CLASSES[:default]}"
       - else
-        span.float-right = button_link_to "upravit popis", recipe_path(@recipe, edited_section: :procedure) if can? :update, @recipe
-        = @recipe.procedure
+        - if can? :update, @recipe
+          span.float-right = button_link_to "upravit popis", recipe_path(@recipe, edited_section: :procedure)
+
+        - if @recipe.procedure?
+          = @recipe.procedure
+        - else
+          = render CardComponent.new(class: "sm:w-1/3 border-gray-300") do |c|
+            = c.with_body do
+              span.italic = "recept nemá zadaný postup"
 
     - if @edited_section == :tasks
       = render "tasks_edit", recipe: @recipe, tasks: @recipe.tasks
