Add some permission checks, make recipes draggable to empty days

--- a/app/views/daily_plans/show.html.slim
+++ b/app/views/daily_plans/show.html.slim
@@ -13,26 +13,24 @@
       div = "počet porcí (#{@daily_plan.portion_count})"
   ul.col-span-2 data-controller="sortable"
     - @daily_plan.daily_plan_recipes.each do |day_recipe|
-      = render partial: "daily_plans/day_recipe", locals: {day_recipe: }
+      = render partial: "daily_plans/day_recipe", locals: { day_recipe: }
 
-  #add-shopping.mb-4
-    = action_button_to "přidat nákup", daily_plan_recipes_path(daily_plan_id: @daily_plan, recipe_id: Recipe.shopping, portion_count: 0)
+  - if can? :update, @daily_plan
+    #add-shopping.mb-4
+      = action_button_to "přidat nákup", daily_plan_recipes_path(daily_plan_id: @daily_plan, recipe_id: Recipe.shopping, portion_count: 0)
 
-  #add-recipe.mb-4
-    h2.text-xl.font-bold.mb-2 přidat recept
-    = form_tag daily_plan_recipes_path(daily_plan_id: @daily_plan), method: :post do
-      .grid.grid-cols-4
-        div = select_tag :recipe_id, grouped_options_for_select([['moje recepty',  current_user.recipes.collect {|v| [ v.name, v.id ] }],
-                                                               ['oblíbené',  Recipe.liked_by(current_user).collect {|v| [ v.name, v.id ] }],
-                                                               ['veřejné',  Recipe.published.collect {|v| [ v.name, v.id ] }],
-                                                              ]),
-                       class: "w-80"
+    #add-recipe.mb-4
+      h2.text-xl.font-bold.mb-2 přidat recept
+      = form_tag daily_plan_recipes_path(daily_plan_id: @daily_plan), method: :post do
+        .grid.grid-cols-4
+          div = select_tag :recipe_id, grouped_options_for_select([ [ "moje recepty",  current_user.recipes.collect { |v| [ v.name, v.id ] } ],
+                                                                [ "oblíbené",  Recipe.liked_by(current_user).collect { |v| [ v.name, v.id ] } ],
+                                                                [ "veřejné",  Recipe.published.collect { |v| [ v.name, v.id ] } ] ]),
+                        class: "w-80"
 
-
-        div = select_tag :meal_type, options_for_select(DailyPlanRecipe::MEAL_TYPES), include_blank: true
-        div = number_field_tag :portion_count, @daily_plan.portion_count
-        div = submit_tag "přidat", class: Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:primary]
-
+          div = select_tag :meal_type, options_for_select(DailyPlanRecipe::MEAL_TYPES), include_blank: true
+          div = number_field_tag :portion_count, @daily_plan.portion_count
+          div = submit_tag "přidat", class: Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:primary]
 
 hr.mb-4
 
