--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,7 +33,7 @@ html
     - else
       = render("shared/public_navbar")
 
-    .md:container.md:mx-auto.mx-3.mb-24
+    .md:container.md:mx-auto.mx-3.mb-24.mt-3.sm:mt-auto
       - if content_for?(:breadcrumbs)
 
         .mb-5.font-bolder
