Redesign daily_plan page

--- a/app/views/daily_plans/_tasks.html.slim
+++ b/app/views/daily_plans/_tasks.html.slim
@@ -1,7 +1,9 @@
 /# locals: (daily_plan:)
 
 #tasks
-    h2.text-xl.font-bold úkoly
+    h2.text-2xl
+        = icon(:check_circle)
+        | úkoly
 
     - if daily_plan.day_tasks.any?
         ul
@@ -9,13 +11,14 @@
                 li.mb-1
                     = default_form_for task, url: daily_plan_task_path(daily_plan_id: daily_plan.id, id: task.id), method: :patch, html: { class: "inline", data: { controller: "form" } } do |form|
                         = form.input :name, col_span: 3, input_html: { data: { action: "change->form#submit" } }
-                        = form.input :description, col_span: 3, input_html: { class: "italic", data: { action: "change->form#submit" } }
+                        = form.input :description, col_span: 6, input_html: { class: "italic", data: { action: "change->form#submit" } }
                         = action_button_to "smazat", task, formaction: daily_plan_task_path(daily_plan_id: daily_plan.id, id: task.id), formmethod: :delete, type: :dangerous, method: :delete, data: { turbo_confirm: "Opravdu smazat?" }, class: "btn btn-danger"
+
     - if can? :update, daily_plan
         #add-task
             h2.text-xl.font-bold.mb-2 přidat úkol
-            = default_form_for DailyPlanTask.new, url: daily_plan_tasks_path(daily_plan_id: daily_plan.id) do |form|
-                = form.input :name, col_span: 3
-                = form.input :description, col_span: 3
+            = default_form_for DailyPlanTask.new, url: daily_plan_tasks_path(daily_plan_id: daily_plan.id), html: { class: "inline", data: { controller: "form" } } do |form|
+                = form.input :name, col_span: 3, data: { action: "change->form#submit" }
+                = form.input :description, col_span: 6, as: :hidden
                 = form.input :daily_plan_id, as: :hidden, input_html: { value: daily_plan.id }
-                = form.submit "přidat"
+                / = form.submit "přidat"
