--- a/app/views/daily_plans/show.html.slim
+++ b/app/views/daily_plans/show.html.slim
@@ -5,33 +5,31 @@
 
 = render "breadcrumbs", daily_plan: @daily_plan
 
-.mt-3.mb-4 id="#{dom_id(@daily_plan)}-recipes"
-  .font-bold.mb-1
-    .grid.grid-cols-4
-      div = "jídlo"
-      div = "typ jídla"
-      div = "počet porcí (#{@daily_plan.portion_count})"
-  ul.col-span-2 data-controller="sortable"
+.mt-3.mb-16 id="#{dom_id(@daily_plan)}-recipes"
+  .mb-5
+    .grid.grid-cols-12
+      .col-span-2.text-2xl
+        = icon("fork-knife")
+        = "jídlo"
+      / div = "typ jídla"
+      .col-span-8
+      .col-span-2
+        - if can? :update, @daily_plan
+          = action_button_to "přidat nákup", daily_plan_recipes_path(daily_plan_id: @daily_plan, recipe_id: Recipe.shopping, portion_count: 0), icon: :shopping_cart, type: :plain
+      / div = "počet porcí (#{@daily_plan.portion_count})"
+  ul data-controller="sortable"
     - @daily_plan.daily_plan_recipes.each do |day_recipe|
-      = render partial: "daily_plans/day_recipe", locals: { day_recipe: }
+      = render "day_recipe", day_recipe:
 
   - if can? :update, @daily_plan
-    #add-shopping.mb-4
-      = action_button_to "přidat nákup", daily_plan_recipes_path(daily_plan_id: @daily_plan, recipe_id: Recipe.shopping, portion_count: 0)
-
-    #add-recipe.mb-4
-      h2.text-xl.font-bold.mb-2 přidat recept
-      = form_tag daily_plan_recipes_path(daily_plan_id: @daily_plan), method: :post do
-        .grid.grid-cols-4
-          div = select_tag :recipe_id, grouped_options_for_select([ [ "moje recepty",  current_user.recipes.collect { |v| [ v.name, v.id ] } ],
-                                                                [ "oblíbené",  Recipe.liked_by(current_user).collect { |v| [ v.name, v.id ] } ],
-                                                                [ "veřejné",  Recipe.published.collect { |v| [ v.name, v.id ] } ] ]),
-                        class: "w-80"
-
-          div = select_tag :meal_type, options_for_select(DailyPlanRecipe::MEAL_TYPES), include_blank: true
-          div = number_field_tag :portion_count, @daily_plan.portion_count
-          div = submit_tag "přidat", class: Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:primary]
-
-hr.mb-4
+    #add-recipe
+      = default_form_for DailyPlanRecipe.new(daily_plan: @daily_plan, portion_count: @daily_plan.portion_count), url: daily_plan_recipes_path(daily_plan_id: @daily_plan), html: { data: { controller: "form" } } do |form|
+        .col-span-1
+        = form.input :recipe_id, as: :grouped_select, collection: [ [ "moje recepty",  current_user.recipes.collect { |v| [ v.name, v.id ] } ],
+                                                                   [ "oblíbené",  Recipe.liked_by(current_user).collect { |v| [ v.name, v.id ] } ],
+                                                                   [ "veřejné",  Recipe.published.collect { |v| [ v.name, v.id ] } ] ],
+                                 group_method: :last, label: "recept", col_span: 4, input_html: { data: { action: "change->form#submit" } }
+        = form.input :meal_type, collection: DailyPlanRecipe::MEAL_TYPES, include_blank: true, col_span: 3
+        = form.input :portion_count, col_span: 2
 
 == render "tasks", daily_plan: @daily_plan
