--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,10 @@
 /* Application styles */
+:root {
+  --background-color: #FCFAF7;
+}
+
 body {
-  background-color: #FCFAF7;
+  background-color: var(--background-color);
 }
 
 h2 {
@@ -71,4 +75,30 @@ input[type=number]::-webkit-outer-spin-button {
 
 button.dropdown-button:has( + div > ul:empty) {
   display: none;
+}
+
+
+.hw-combobox {
+  width: 100%;
+  z-index: 1000;
+
+  & .hw-combobox__main__wrapper {
+    width: 100%;
+    height: 3rem;
+    margin-top: 0.25rem;
+    border-radius: 1rem;
+    background-color: white;
+    border-color: #6b7280;
+
+    & input.hw-combobox__input {
+      width: 100%;
+      height: 100%;
+      /* padding: 0 1rem; */
+      /* border: 1px solid #ccc; */
+      /* border-radius: 1rem; */
+      /* font-size: 1rem; */
+      /* color: #333; */
+      /* background-color: #fff; */
+    }
+  }
 }
