--- a/app/views/recipes/_form.html.slim
+++ b/app/views/recipes/_form.html.slim
@@ -3,13 +3,10 @@
   = form.input :portion_count, col_span: 6
   = form.association :category, col_span: 6
   = form.association :dietary_labels, collection: Label.of_category(:dietary), col_span: 6,
-                     input_wrapper_html: { data: { controller: "label-badge", label_badge_multiple_value: true }}, input_html: { data: { label_badge_target: "select" } }
-  = form.association :difficulty_labels, col_span: 6, collection: Label.of_category(:difficulty).map { |l| [l.visible_name, l.id, {"data-label-color-class": l.color }] },
-                     input_wrapper_html: { data: { controller: "label-badge" }}, input_html: { multiple: false, data: { label_badge_target: "select" } }, allow_blank: false
+                     input_wrapper_html: { data: { controller: "label-badge", label_badge_multiple_value: true } }, input_html: { data: { label_badge_target: "select" } }
+  = form.association :difficulty_labels, col_span: 6, collection: Label.of_category(:difficulty).map { |l| [ l.visible_name, l.id, { "data-label-color-class": l.color } ] },
+                     input_wrapper_html: { data: { controller: "label-badge" } }, input_html: { multiple: false, data: { label_badge_target: "select" } }, allow_blank: false
 
   = form.buttons_section
-    - path = recipe.persisted? ? recipe_path(recipe) : recipes_path
-    = button_link_to "", path, type: :secondary do
-      = svg("left-caret", class: "h-4 w-4 mr-2")
-      | zpět
+    = form.cancel_link
     = form.submit
