--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -4,29 +4,28 @@
 /   - placeholder = current_user.events.order("RAND()").limit(1).first&.name
 /   = searchbox(path: events_path, placeholder: placeholder, target_turbo_frame: "events")
 
-= turbo_frame_tag :events
-  #future-events
-    .flex.justify-between
-      h2.mt-6.mb-3p
-        = icon(:calendar, class: "mr-2")
-        = "nadcházející akce".upcase
+#future-events
+  .flex.justify-between
+    h2.mt-6.mb-3p
+      = icon(:calendar, class: "mr-2")
+      = "nadcházející akce".upcase
 
-      = button_link_to "nová akce", new_event_path, data: { turbo_frame: "_top" }
+    = button_link_to "nová akce", new_event_path
 
-    .md:grid.grid-cols-2.gap-2
-      - @events.active.future.each do |event|
-        = render "events/card", event:
+  .md:grid.grid-cols-2.gap-2
+    - @events.active.future.each do |event|
+      = render "events/card", event:
 
-  #past-events
-    h2.mt-4.mb-3
-      = icon(:archive, class: "mr-2")
-      = "skončené akce".upcase
-    .md:grid.grid-cols-2.gap-2
-      - @events.active.past.each do |event|
-        = render "events/card", event:
+#past-events
+  h2.mt-4.mb-3
+    = icon(:archive, class: "mr-2")
+    = "skončené akce".upcase
+  .md:grid.grid-cols-2.gap-2
+    - @events.active.past.each do |event|
+      = render "events/card", event:
 
-  #archived-events
-    = heading("archivované akce", :h2)
-    .md:grid.grid-cols-2.gap-2
-      - @events.archived.each do |event|
-        = render "events/card", event:
+#archived-events
+  = heading("archivované akce", :h2)
+  .md:grid.grid-cols-2.gap-2
+    - @events.archived.each do |event|
+      = render "events/card", event:
