--- a/app/views/published_recipes/index.html.slim
+++ b/app/views/published_recipes/index.html.slim
@@ -25,4 +25,4 @@
     /           = "nic nemůžu najít :("
 
     - @published_recipes.each do |recipe|
-      = render "recipes/recipe_card", recipe:, class: "h-full"
+      = render "recipes/card", recipe:, classes: "h-full"
