--- a/app/views/recipes/_card.html.slim
+++ b/app/views/recipes/_card.html.slim
@@ -1,5 +1,7 @@
+/# locals: (recipe:, classes: "")
+
 = turbo_frame_tag dom_id(recipe)
-    = render CardComponent.new(recipe, class: local_assigns[:class]) do |card|
+    = render CardComponent.new(recipe, class: classes) do |card|
         = card.with_heading do
             .grid.grid-cols-2
                 = link_to(recipe.name, recipe, data: { turbo_frame: "_top" })
