--- a/feedback/app/views/feedback/posts/_post.html.erb
+++ b/feedback/app/views/feedback/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div style="border: solid 0.1rem; padding: 0.4rem;">
+<div style="border: solid 0.1rem; padding: 0.4rem; margin-bottom: 1rem;">
     Details: <%= link_to(t("Show more"), post) %>
     <br>
     What: <%= post.description %>
