--- a/feedback/app/assets/stylesheets/feedback/application.css
+++ b/feedback/app/assets/stylesheets/feedback/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ .feedback-button {
+  border: 1px solid #ccc;
+  padding: 0.1rem 0.5rem;
+  border-radius: 0.2rem;
+ }
+
+ .feedback-button:hover {
+  background-color: #f1f1f1;
+ }
