--- a/feedback/app/views/feedback/notifications/_notification.html.erb
+++ b/feedback/app/views/feedback/notifications/_notification.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id notification %>">
+<div id="<%= dom_id notification %>" style="margin-bottom: 0.7rem;">
   <p>
     <strong>
       <%= t("Title") %>:
