--- a/feedback/app/views/feedback/posts/index.html.erb
+++ b/feedback/app/views/feedback/posts/index.html.erb
@@ -1,4 +1,11 @@
+<% if current_user.admin? %>
+    <div>
+        <%= link_to("admin", admin_posts_path) %>
+    </div>
+<% end %>
+
 <%= t("My feedback") %> :
+
 
 <% @posts.each do |post| %>
     <%= render "post", post: %>
